Fixes a number of compiler warnings.
Signed-off-by: Santiago Pericas-Geertsen <santiago.pericasgeertsen@oracle.com>